--- a/package.json
+++ b/package.json
@@ -21,54 +21,54 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/common": "8.0.0",
+    "@nestjs/config": "2.2.0",
+    "@nestjs/core": "8.0.0",
+    "@nestjs/jwt": "9.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^9.0.4",
-    "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "^6.0.4",
-    "@nestjs/typeorm": "^9.0.0",
-    "@nestjs/websockets": "^9.0.4",
-    "@types/bcryptjs": "^2.4.2",
-    "bcryptjs": "^2.4.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "socket.io": "^4.5.1",
-    "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/platform-express": "8.0.0",
+    "@nestjs/platform-socket.io": "9.0.4",
+    "@nestjs/serve-static": "3.0.0",
+    "@nestjs/swagger": "6.0.4",
+    "@nestjs/typeorm": "9.0.0",
+    "@nestjs/websockets": "9.0.4",
+    "@types/bcryptjs": "2.4.2",
+    "bcryptjs": "2.4.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.0",
+    "pg": "8.7.3",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.2.0",
+    "socket.io": "4.5.1",
+    "typeorm": "0.3.7",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "8.0.0",
+    "@nestjs/schematics": "8.0.0",
+    "@nestjs/testing": "8.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.5.0",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "@types/multer": "1.4.7",
+    "@types/node": "16.0.0",
+    "@types/passport-jwt": "3.0.6",
+    "@types/supertest": "2.0.11",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "8.0.1",
     "jest": "28.0.3",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
     "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -79,7 +79,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      ".+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
